@@ -647,6 +647,12 @@ effect.</p>
     black and transparent.  As of 0.9.21, if a Starter is black and white,
     with no transparency, white will be converted to transparent when the
     Starter is opened.</p>
+
+    <p><b>Note:</b> Previous to Tux Paint 0.9.22, Starters had to be in
+    PNG or JPEG (backgrounds only) format.  As of 0.9.22, they may be in
+    SVG (vector graphics) or KPX (templates from Kid Pix, another childrens'
+    drawing program; they are special files which simply contain a JPEG
+    within).</p>
   </blockquote>
 
   <b>Scene-Style</b>
